Fix for list of trails after recording a new trail.
The list of trails in the Trails menu was not showing correctly after
saving a new trail. Fixed so that list of trails was not changed. Note
that the new trail does not show in the list of trails because the list
of trails is not changed.

--- a/www/css/trail2.css
+++ b/www/css/trail2.css
@@ -194,9 +194,16 @@ label {
 {
     width: 100%;
     float: left;
+    /* ////20170115
     margin-top: 5px;
     margin-left: 5px;
     margin-bottom: 0px;
+    */
+    padding-top: 5px;
+    padding-left: 5px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    box-sizing: border-box;
 }
 
 #buSaveOffline {
